--- a/examples/treegrid/treegrid-1.html
+++ b/examples/treegrid/treegrid-1.html
@@ -77,9 +77,9 @@ document.addEventListener('DOMContentLoaded', function () {
   <main>
   <h1>Treegrid Email Inbox Example</h1>
   <p>
-    <strong>NOTE:</strong> This example page is not yet complete.
-    Development of this example is tracked by
-    <a href="https://github.com/w3c/aria-practices/issues/132">issue 132.</a>
+    <strong>NOTE:</strong> This example is new in APG 1.1 release 2.
+    Please provide feedback in 
+    <a href="https://github.com/w3c/aria-practices/issues/790">issue 790.</a>
   </p>
   <p>
     The following example demonstrates how the
