Add data-test-ids to next set of tests

--- a/examples/dialog-modal/dialog.html
+++ b/examples/dialog-modal/dialog.html
@@ -111,7 +111,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
+          <tr data-test-id="key-tab">
             <th><kbd>Tab</kbd></th>
             <td>
               <ul>
@@ -120,7 +120,7 @@
               </ul>
             </td>
           </tr>
-          <tr>
+          <tr data-test-id="key-shift-tab">
             <th><kbd>Shift + Tab</kbd></th>
             <td>
               <ul>
@@ -129,7 +129,7 @@
               </ul>
             </td>
           </tr>
-          <tr>
+          <tr data-test-id="key-escape">
             <th><kbd>Escape</kbd></th>
             <td>Closes the dialog.</td>
           </tr>
@@ -149,7 +149,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
+          <tr data-test-id="dialog-role">
             <th scope="row"><code>dialog</code></th>
             <td></td>
             <td><code>div</code></td>
@@ -157,7 +157,7 @@
               Identifies the element that serves as the dialog container.
             </td>
           </tr>
-          <tr>
+          <tr data-test-id="aria-labelledby">
             <td></td>
             <th scope="row"><code>aria-labelledby=<q>IDREF</q></code></th>
             <td><code>div</code></td>
@@ -165,7 +165,7 @@
               Gives the dialog an accessible name by referring to the element that provides the dialog title.
             </td>
           </tr>
-          <tr>
+          <tr data-test-id="aria-describedby">
             <td></td>
             <th scope="row"><code>aria-describedby=<q>IDREF</q></code></th>
             <td><code>div</code></td>
@@ -179,7 +179,7 @@
               </ul>
             </td>
           </tr>
-          <tr>
+          <tr data-test-id="aria-modal">
             <td></td>
             <th scope="row"><code>aria-modal=<q>true</q></code></th>
             <td><code>div</code></td>
