--- a/examples/treeview/treeview-1/treeview-1a.html
+++ b/examples/treeview/treeview-1/treeview-1a.html
@@ -282,7 +282,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
+            <tr data-test-id="key-enter-or-space">
               <th><kbd>Enter</kbd><br>or <kbd>Space</kbd></th>
               <td>
                 <ul>
@@ -291,7 +291,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="key-down-arrow">
               <th><kbd>Down arrow</kbd></th>
               <td>
                 <ul>
@@ -300,7 +300,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="key-up-arrow">
               <th><kbd>Up arrow</kbd></th>
               <td>
                 <ul>
@@ -309,7 +309,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="key-right-arrow">
               <th><kbd>Right Arrow</kbd></th>
               <td>
                 <ul>
@@ -319,7 +319,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="key-left-arrow">
               <th><kbd>Left Arrow</kbd></th>
               <td>
                 <ul>
@@ -329,15 +329,15 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="key-home">
               <th><kbd>Home</kbd></th>
               <td>Moves focus to first node without opening or closing a node.</td>
             </tr>
-            <tr>
+            <tr data-test-id="key-end">
               <th><kbd>End</kbd></th>
               <td>Moves focus to the last node that can be focused without expanding any nodes that are closed.</td>
             </tr>
-            <tr>
+            <tr data-test-id="key-character">
               <th><kbd>a-z, A-Z</kbd></th>
               <td>
                 <ul>
@@ -347,7 +347,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="key-asterisk">
               <th>
                 <kbd>*</kbd> (asterisk)
               </th>
@@ -374,7 +374,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
+            <tr data-test-id="tree-role">
               <th scope="row"><code>tree</code></th>
               <td></td>
               <td><code>ul</code></td>
@@ -389,19 +389,19 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="tree-aria-labelledby">
               <td></td>
               <th scope="row"><code>aria-labelledby=&quot;IDREF&quot;</code></th>
               <td><code>ul</code></td>
               <td>Refers to the heading element that contains the label that identifies the purpose of the <code>tree</code>.</td>
             </tr>
-            <tr>
+            <tr data-test-id="treeitem-role">
               <th scope="row"><code>treeitem</code></th>
               <td></td>
               <td><code>li</code></td>
               <td>Identifies the  element as a <code>treeitem</code>.</td>
             </tr>
-            <tr>
+            <tr data-test-id="treeitem-tabindex">
               <td></td>
               <th scope="row"><code>tabindex=&quot;-1&quot;</code></th>
               <td><code>li</code></td>
@@ -412,7 +412,7 @@
                  </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="treeitem-tabindex">
               <td></td>
               <th scope="row"><code>tabindex=&quot;0&quot;</code></th>
               <td><code>li</code></td>
@@ -428,7 +428,7 @@
                  </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="treeitem-ariaexpanded">
               <td></td>
               <th scope="row"><code>aria-expanded=&quot;false&quot;</code></th>
               <td><code>li</code></td>
@@ -440,7 +440,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="treeitem-ariaexpanded">
               <td></td>
               <th scope="row"><code>aria-expanded=&quot;true&quot;</code></th>
               <td><code>li</code></td>
@@ -452,7 +452,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="group-role">
               <th scope="row"><code>group</code></th>
               <td></td>
               <td><code>ul</code></td>
