Switch Pattern: add note with link to development issue
Modified the draft switch section in aria-practices.html to add a link to development issue 162.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2496,15 +2496,20 @@
 
     <section class="widget" id="switch">
       <h3>Switch</h3>
-      <p>A switch is similar to a checkbox, but instead of being checked or unchecked its states are <q>on</q> or <q>off</q>.  The switch  provides assistive technologies the opportunity to render the state of the switch consistent with the graphical rendering (e.g. announcing "on" and "off").  Switches are often found in user preference and profile pages.</p>
+      <p>
+        This pattern is work in progress.
+        Please provide feedback in
+        <a href="https://github.com/w3c/aria-practices/issues/162">issue 162.</a>
+      </p>
+      <p>
+        A switch is similar to a checkbox, but instead of being checked or unchecked its states are <q>on</q> or <q>off</q>. 
+        The switch  provides assistive technologies the opportunity to render the state of the switch consistent with the graphical rendering (e.g., announcing "on" and "off").
+        Switches are often found in user preference and profile pages.
+      </p>
 
       <section class="notoc">
-        <h4>Examples</h4>
-        <ul>
-          <li>
-            <a href="examples/switch/switch.html">Switch Example</a>: Demonstrates simple on/off switches.
-          </li>
-        </ul>
+        <h4>Example</h4>
+        <p><a href="examples/switch/switch.html">Switch Example</a>: Demonstrates simple on/off switches.</p>
       </section>
 
       <section class="notoc">
