--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2752,9 +2752,9 @@
     <section class="widget" id="treegrid">
       <h3>Treegrid</h3>
       <p>
-        <strong>NOTE:</strong> This section is not complete.
-        Development of content for this pattern is tracked by 
-        <a href="https://github.com/w3c/aria-practices/issues/91">issue 91.</a>
+        <strong>NOTE:</strong> This pattern is new in APG 1.1 Release 2.
+        Please provide feedback in
+        <a href="https://github.com/w3c/aria-practices/issues/793">issue 793.</a>
       </p>
         <p>
           A <a href="#treegrid" class="role-reference">treegrid</a> widget presents a hierarchical data grid consisting of tabular information that is editable or interactive.
