--- a/examples/radio/radio-1/radio-1.html
+++ b/examples/radio/radio-1/radio-1.html
@@ -83,7 +83,13 @@
         <h2>Accessibility Features</h2>
         <ul>
           <li>Uses CSS attribute selectors for synchronizing <code>aria-checked</code> state with the visual state indicator.</li>
-          <li>Uses CSS <code>:hover</code> and <code>:focus</code> pseudo-selectors for styling visual keyboard focus and hover.</li>
+          <li>
+            Uses CSS <code>:hover</code> and <code>:focus</code> pseudo-selectors for styling visual keyboard focus and hover.
+            <ul>
+              <li>Focus indicator encompasses both radio button and label, making it easier to perceive which option is being chosen.</li>
+              <li>Hover changes background of both radio button and label, making it easier to perceive that clicking either the label or button will activate the radio button.</li>
+            </ul>
+          </li>
         </ul>
       </section>
 
