Accordion Example and Pattern: Add Tab and Remove ctrl-PageUp and Ctrl-PageDown from documentation
Changed keyboard interaction documentation in the accordion pattern in aria-practices.html and the accordion example in examples/accordion/accordion.html:
* For issue #400, remove ctrl-pageUp and ctrl-pageDown (optional commands) from the pattern.
* For issue #426, add documentation of Tab and Shift+Tab.

--- a/examples/accordion/accordion.html
+++ b/examples/accordion/accordion.html
@@ -182,6 +182,24 @@
           <td>When focus is on the accordion header of a collapsed section, expands the section.</td>
         </tr>
         <tr>
+          <th><kbd>Tab</kbd></th>
+          <td>
+            <ul>
+              <li>Moves focus to the next focusable element.</li>
+              <li>All focusable elements in the accordion are included in the page <kbd>Tab</kbd> sequence.</li>
+            </ul>
+          </td>
+        </tr>
+        <tr>
+          <th><kbd>Shift + Tab</kbd></th>
+          <td>
+            <ul>
+              <li>Moves focus to the previous focusable element.</li>
+              <li>All focusable elements in the accordion are included in the page <kbd>Tab</kbd> sequence.</li>
+            </ul>
+          </td>
+        </tr>
+        <tr>
           <th><kbd>Down Arrow</kbd></th>
           <td>
             <ul>
@@ -206,25 +224,6 @@
         <tr>
           <th><kbd>End</kbd></th>
           <td>When focus is on an accordion header, moves focus to the last accordion header.</td>
-        </tr>
-        <tr>
-          <th><kbd>Control + Page Down</kbd></th>
-          <td>
-            <ul>
-              <li>When focus is inside an accordion panel or on an accordion header, moves focus to the next accordion header.</li>
-              <li>When focus is on last accordion header or inside last accordion panel, moves focus to first accordion header.</li>
-            </ul>
-          </td>
-        </tr>
-        <tr>
-          <th><kbd>Control + Page Up</kbd></th>
-          <td>
-            <ul>
-              <li>When focus is inside an accordion panel, moves focus to the header for that panel.</li>
-              <li>When focus is on an accordion header, moves focus to the previous accordion header.</li>
-              <li>When focus is on first accordion header, moves focus to last accordion header.</li>
-            </ul>
-          </td>
         </tr>
       </tbody>
     </table>
