--- a/aria-practices.html
+++ b/aria-practices.html
@@ -202,6 +202,8 @@
               </li>
             </ul>
           </li>
+          <li><kbd>Tab</kbd>: Moves focus to the next focusable element; all focusable elements in the accordion are included in the page <kbd>Tab</kbd> sequence.</li>
+          <li><kbd>Shift + Tab</kbd>: Moves focus to the previous focusable element; all focusable elements in the accordion are included in the page <kbd>Tab</kbd> sequence.</li>
           <li>
             <kbd>Down Arrow</kbd> (Optional): If focus is on an accordion header, moves focus to the next accordion header.
             If focus is on the last accordion header, either does nothing or moves focus to the first accordion header.
@@ -215,17 +217,6 @@
           </li>
           <li>
             <kbd>End</kbd> (Optional): When focus is on an accordion header, moves focus to the last accordion header.
-          </li>
-          <li>
-            <kbd>Control + Page Down</kbd> (Optional): If focus is inside an accordion
-            panel or on an accordion header, moves focus to the next accordion header.
-            If focus is in the last accordion header or panel, either does nothing or
-            moves focus to the first accordion header.
-          </li>
-          <li>
-            <kbd>Control + Page Up</kbd> (Optional): If focus is inside an accordion panel, moves focus to the header for that panel.
-            If focus is on an accordion header, moves focus to the previous accordion header.
-            If focus is on the first accordion header, either does nothing or moves focus to the last accordion header.
           </li>
         </ul>
       </section>
