--- a/examples/alert/alert.html
+++ b/examples/alert/alert.html
@@ -32,7 +32,7 @@
     </p>
     <p>Similar examples include:</p>
     <ul>
-      <li><a href="alertdialog.html">Alert Dialog Example</a>: A confirmation prompt that demonstrates an alert dialog.</li>
+      <li><a href="../dialog-modal/alertdialog.html">Alert Dialog Example</a>: A confirmation prompt that demonstrates an alert dialog.</li>
     </ul>
     <section>
       <h2 id="ex_label">Example</h2>
