Alert Pattern: Fix broken link to alert example
For issue #786, modified the link to the example in the alert section of aria-practices.html.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -289,7 +289,7 @@
 
       <section class="notoc">
         <h4>Example</h4>
-        <p><a href="examples/alert/index.html">Alert Example</a></p>
+        <p><a href="examples/alert/alert.html">Alert Example</a></p>
       </section>
 
       <section class="notoc">
