ARIA 1.0 Combobox Example: Fix Link to js file in source display section
For issue #786, Changed the Javascript source section in examples/combobox/aria1.0pattern/combobox-autocomplete-list.html:
Fixed link to combobox-1.0-list.js.

--- a/examples/combobox/aria1.0pattern/combobox-autocomplete-list.html
+++ b/examples/combobox/aria1.0pattern/combobox-autocomplete-list.html
@@ -442,7 +442,7 @@
         </li>
         <li>
           Javascript:
-          <a href="js/combobox-1.0-listbox.js" type="text/javascript">combobox-1.0-listbox.js</a>
+          <a href="js/combobox-1.0-list.js" type="text/javascript">combobox-1.0-list.js</a>
         </li>
         <li>
           Javascript:
