--- a/examples/grid/LayoutGrids.html
+++ b/examples/grid/LayoutGrids.html
@@ -208,7 +208,7 @@
           </div>
           <div role="row">
             <div role="gridcell"><h5 class="ex3_result_header">
-                <a tabindex="-1" href="https://www.w3.org/TR/wai-aria/states_and_properties">ARIA
+                <a tabindex="-1" href="https://www.w3.org/TR/wai-aria-1.0/states_and_properties">ARIA
                   States and Properties - W3C</a>
               </h5></div> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
               tabindex="-1" role="gridcell"
@@ -244,7 +244,7 @@
           </div>
           <div role="row">
             <div role="gridcell"><h5 class="ex3_result_header">
-                <a tabindex="-1" href="https://www.w3.org/TR/wai-aria/roles">The Roles Model |
+                <a tabindex="-1" href="https://www.w3.org/TR/wai-aria-1.0/roles">The Roles Model |
                   Accessible Rich Internet Applications (WAI-ARIA) 1.0</a>
               </h5></div> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
               tabindex="-1" role="gridcell"
@@ -343,7 +343,7 @@
           </div>
           <div role="row">
             <div role="gridcell"><h5 class="ex3_result_header">
-                <a tabindex="-1" href="https://www.w3.org/TR/wai-aria/introduction">Introduction
+                <a tabindex="-1" href="https://www.w3.org/TR/wai-aria-1.0/introduction">Introduction
                   | Accessible Rich Internet Applications (WAI-ARIA) 1.0</a>
               </h5></div> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
               tabindex="-1" role="gridcell"
@@ -353,7 +353,7 @@
           </div>
           <div role="row">
             <div role="gridcell"><h5 class="ex3_result_header">
-                <a tabindex="-1" href="https://www.w3.org/TR/wai-aria/usage">Using WAI-ARIA |
+                <a tabindex="-1" href="https://www.w3.org/TR/wai-aria-1.0/usage">Using WAI-ARIA |
                   Accessible Rich Internet Applications (WAI-ARIA) 1.0</a>
               </h5></div> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
               tabindex="-1" role="gridcell"
