Appendix: Add change log section for release 2

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4751,6 +4751,47 @@
 
     <section id="change_log" class="appendix">
       <h3>Change History</h3>
+      <section id="change_log_2018_july" class="appendix">
+        <h4>Changes in July 2018 Publication of Note Release 2</h4>
+        <ul>
+          <li>
+            Added the following:
+            <ul>
+              <li>Treegrid design pattern and example</li>
+              <li>Alert dialog example</li>
+            </ul>
+          </li>
+          <li>Significant revisions of guidance or implementation were made to the following design patterns and examples:
+            <ul>
+              <li>Accordion pattern and example, including removing two optional key commands from the pattern.</li>
+              <li>Checkbox example bug fixes</li>
+              <li>ARIA 1.0 Combobox example, including escape key behavior</li>
+              <li>ARIA 1.1 Combobox example labeling</li>
+              <li>Modal dialog example, primarily code refactoring when adding alert dialog</li>
+              <li>Grid pattern, including guidance on column selection</li>
+              <li>Listbox examples</li>
+              <li>Menu pattern, including guidance on menu/submenu structure</li>
+              <li>editor menubar example, including significant improvement to mouse behaviors.</li>
+              <li>Menu button example bug fixes</li>
+              <li>Navigation menubar example bug fixes</li>
+              <li>Radio group example styling</li>
+              <li>Tabs pattern, including labeling guidance</li> 
+              <li>Tree view pattern, including multi-select guidance</li>
+              <li>Tree view example bug fixes</li>
+            </ul>
+          </li>
+        </ul>
+        <p>Also see:</p>
+        <ul>
+          <li>
+            <a href="https://github.com/w3c/aria-practices/milestone/1?closed=1">The APG 1.1 Release 2 Milestone</a>:
+            which lists the GitHub issues that document discussions and reviews of changes included in the July 2018 publication.
+          </li>
+          <li>
+            <a href="https://github.com/w3c/aria-practices/wiki/Change-Log-for-July-2018-APG-1.1-Note-Release-2">Detailed change log with links to all commits that are new in the July 2018 publication  since the December 2017 working draft.</a>
+          </li>
+        </ul>
+      </section>
       <section id="change_log_2017_december" class="appendix">
         <h4>Changes in December 2017 Publication as Note</h4>
         <ul>
