--- a/aria-practices.html
+++ b/aria-practices.html
@@ -20,34 +20,15 @@
   </section>
 
   <section id="sotd">
-    <p>
-      This is an editor's draft by the
-      <a href="https://www.w3.org/WAI/ARIA/">Accessible Rich Internet Applications Working Group</a>
-      of the
-      <a href="https://www.w3.org/WAI/">Web Accessibility Initiative</a>.
-      It supports the
-      <a href="" class="specref">WAI-ARIA 1.1</a> [<cite><a href="#bib-WAI-ARIA" class="bibref">WAI-ARIA</a></cite>]
-      specification, providing detailed advice and examples beyond what would be appropriate to a technical specification but which are important to understand the specification.
-    </p>
-    <p> This draft includes only a portion of content planned for WAI-ARIA Authoring Practices 1.1. To see plans for the complete guide, review the <a href="https://github.com/w3c/aria-practices/milestones?direction=asc&amp;sort=due_date&amp;state=open">Authoring Practices Milestone Plan</a>. </p>
-    <p>
-      Feedback on the  information provided here is essential to the ultimate success of Rich Internet Applications that afford full access to their information and operations.
-      The Accessible Rich Internet Applications Working Group asks in particular:
-    </p>
-    <ul>
-      <li>Is it clear how to create accessible Rich Internet Applications?</li>
-      <li>Is the usage of roles, states, and properties clear? </li>
-      <li>Are the various types of rich Web content covered? </li>
-      <li>Are considerations beyond the use of WAI-ARIA sufficiently explained? </li>
-      <li>Is the relationship of this document to the WAI-ARIA specification clear? </li>
-      <li>Are the <a href="#aria_ex">design patterns</a> clear?</li>
-    </ul>
+  	<p>This is the WAI-ARIA Authoring Practices 1.1 <a href="https://www.w3.org/2018/Process-20170201/#WGNote">Working Group Note</a> by the <a href="https://www.w3.org/WAI/ARIA/">Accessible Rich Internet Applications Working Group</a>. It supports the <a href="https://www.w3.org/TR/wai-aria-1.1/">Accessible Rich Internet Applications 1.1 W3C Recommendation</a> [[wai-aria-1.1]], providing detailed advice and examples beyond what would be appropriate to a technical specification but which are important to understand the specification.</p>
+  	<p>WAI-ARIA Authoring Practices 1.1 was previously published as a Working Group Note in December 2014, to accompany the WAI-ARIA 1.1 Recommendation. Since then, the group has added an additional design pattern and examples, and improved the quality of many of the other design patterns and examples, to improve the support for WAI-ARIA 1.1. Separately, <a href="https://www.w3.org/TR/wai-aria-practices-1.2/">WAI-ARIA Authoring Practices 1.2</a> is under development, which includes the improvements in this document plus additional features specific to WAI-ARIA 1.2.</p>
     <p>
       To comment,
-      <a href="https://github.com/w3c/aria-practices/issues/">file an issue in the <abbr title="World Wide Web Consortium">W3C</abbr> ARIA Practices GitHub repository</a>,
-      or if that is not possible, send email to
-      <a href="mailto:public-aria@w3.org?subject=Comment%20on%20WAI-ARIA%20Practices%201.1">public-aria@w3.org</a>
+      <a href="https://github.com/w3c/aria-practices/issues/">file an issue in the <abbr title="World Wide Web Consortium">W3C</abbr> aria-practices GitHub repository</a>,
+      or if that is not feasible, send email to
+      <a href="mailto:public-aria@w3.org?subject=Comment%20on%20WAI-ARIA%20Practices%201.2">public-aria@w3.org</a>
       (<a href="http://lists.w3.org/Archives/Public/public-aria/">comment archive</a>).
+      In-progress updates to the document may be viewed in the <a href="https://w3c.github.io/aria-practices/">publicly visible editors' draft</a>.
     </p>
   </section>
 
