update html5 link

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3628,7 +3628,7 @@
       <p> As explained in section <a href="#kbd_generalnav"></a>, all interactive UI components need to be reachable via the keyboard. This is best achieved by either including them in the tab sequence or by making them accessible from a component that is in the tab sequence, e.g., as part of a composite component. This section addresses building and managing the tab sequence, and subsequent sections cover making focusable elements that are contained within components keyboard accessible. </p>
 
       <p>
-        The <a href="https://www.w3.org/TR/html5/editing.html#attr-tabindex">HTML tabindex</a> and <a href="https://www.w3.org/TR/SVG2/struct.html#tabindexattribute">SVG tabindex</a> attributes can be used to add and remove elements from the tab sequence.
+        The <a href="https://www.w3.org/TR/html5/editing.html#the-tabindex-attribute">HTML tabindex</a> and <a href="https://www.w3.org/TR/SVG2/struct.html#tabindexattribute">SVG tabindex</a> attributes can be used to add and remove elements from the tab sequence.
         The value of tabindex can also influence the order of the tab sequence, although authors are strongly advised not to use tabindex for that purpose.
       </p>
 
